[FEAT] Agrego filtro de ordenamiento en la tienda.

--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -28,12 +28,23 @@
 
             <div class="filter__content--desplegable">
               <div class="filter__content">
-                <label class="filter__title" for="order">CATEGORÍA</label>
-                <select class="filter__order" name="order" id="order">
+                <label class="filter__title" for="cat">CATEGORÍA</label>
+                <select class="filter__order" name="cat" id="cat">
                   <option value="todos">Todos</option>
                   <option value="funkos">Funkos</option>
                   <option value="remeras">Remeras</option>
                   <option value="llaveros">Llaveros</option>
+                </select>
+              </div>
+
+              <div class="filter__content">
+                <label class="filter__title" for="order">ORDENAR</label>
+                <select class="filter__order" name="order" id="order">
+                  <option value="default">Por defecto</option>
+                  <option value="maxprice">Mayor precio</option>
+                  <option value="minprice">Menor precio</option>
+                  <option value="az">A - Z</option>
+                  <option value="za">Z - A</option>
                 </select>
               </div>
 
