[FEAT] Agrego máximo de 12 productos en el slider del home y que aparezcan de forma aleatoria. Lo mismo para el slider dentro de la vista de Item pero que solo se relacionen con el item en cuestión. Si el item es de Marvel, solo aparecera en el slider items de marvel.

--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -56,7 +56,7 @@
         <h3 class="slider__title">PRODUCTOS RELACIONADOS</h3>
         <div class="glide__track" data-glide-el="track">
           <ul class="slider__list glide__slides">
-            <% items.forEach(item => { %>
+            <% itemsList.forEach(item => { %>
               <li class="slider__item glide__slide">
                 <article class="card-item">
                   <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
