--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -34,7 +34,7 @@
         <h3 class="slider__title">ÚLTIMOS LANZAMIENTOS</h3>
         <div class="glide__track" data-glide-el="track">
           <ul class="slider__list glide__slides">
-            <% items.forEach(item => { %>
+            <% itemsList.forEach(item => { %>
               <li class="slider__item glide__slide">
                 <article class="card-item">
                   <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
