[FIX] Elimino el item de la vista dentro del slider de productos relacionados. Corrijo valor de los precios a moneda argentina. Arreglo problema de cantidad negativa o cero dentro de la vista de cart. Edito readme.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -34,7 +34,11 @@
         <h3 class="slider__title">ÚLTIMOS LANZAMIENTOS</h3>
         <div class="glide__track" data-glide-el="track">
           <ul class="slider__list glide__slides">
-            <% itemsList.forEach(item => { %>
+            <% const arg = (number) => {
+              return number.toLocaleString('es-AR', { style: 'currency', currency: 'ARS' });
+            };
+            
+            itemsList.forEach(item => { %>
               <li class="slider__item glide__slide">
                 <article class="card-item">
                   <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
@@ -54,7 +58,7 @@
                     <div class="card-item__content">
                       <p class="card-item__license"><%= item.licence_name %></p>
                       <h3 class="card-item__name"><%= item.product_name %></h3>
-                      <p class="card-item__price">$ <%= item.price %></p>
+                      <p class="card-item__price"><%= arg(Number(item.price)) %></p>
                       <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                     </div>
                   </a>
