--- a/src/views/shop/cart.ejs
+++ b/src/views/shop/cart.ejs
@@ -11,17 +11,21 @@
         </div>
 
         <ul class="carrito__list">
-          <% 
+          <% const arg = (number) => {
+            return number.toLocaleString('es-AR', { style: 'currency', currency: 'ARS' });
+          };
+
           totalQuantity = 0;
           totalPrice = 0;
           shipping = 0;
+
           if (locals.cartItems && (locals.cartItems.length > 0)) {            
             cartItems = locals.cartItems;
             cartItems.forEach((cartItem, index) => {
               item = items.find(product => product.product_id === cartItem.id);
               totalQuantity += cartItem.quantity;
               totalPrice += cartItem.quantity * item.price;
-              shipping = 500.00; %>
+              shipping = 500; %>
           <li class="carrito__item" id="item-<%= item.product_id %>">
             <article class="cart-item">
               <div class="cart-item__content">
@@ -36,7 +40,7 @@
                   <h3 class="cart-item__name"><%= item.product_name %></h3>
                   <p class="cart-item__license"><%= item.licence_name %></p>
                   <p class="cart-item__price">
-                    Precio unitario: $ <span class="value__item"><%= item.price %></span>
+                    Precio unitario: <span class="value__item"><%= arg(Number(item.price)) %></span>
                   </p>
                 </div>
               </div>
@@ -45,12 +49,12 @@
                 <input class="cart-item__quantity" type="text" name="quantity" id="quantity-<%= index %>" placeholder="0" value="<%= cartItem.quantity %>" />
                 <div class="cart-item__button--content">
                   <button class="cart-item__button" type="button" onclick="quantityUpdate('<%= cartItem.id %>', 1)" id="add-<%= index %>">+</button>
-                  <button class="cart-item__button" type="button" onclick="quantityUpdate('<%= cartItem.id %>', -1)" id="subtract-<%= index %>">-</button>
+                  <button class="cart-item__button" type="button" <% if (cartItem.quantity <= 1) { %> disabled <% } %> onclick="quantityUpdate('<%= cartItem.id %>', -1)" id="subtract-<%= index %>">-</button>
                 </div>
               </div>
 
               <p class="cart-item__total">
-                $ <span class="value__total"><%= cartItem.quantity * item.price %></span>
+                <span class="value__total"><%= arg(Number(cartItem.quantity) * Number(item.price)) %></span>
               </p>
 
               <form action="/shop/cart/<%= cartItem.id %>?_method=DELETE" method="POST" enctype="application/json">
@@ -78,21 +82,19 @@
         <article class="resumen__content">
           <div class="resumen__div">
             <p class="resumen__detail">CANTIDAD DE ELEMENTOS</p>
-            <p class="resumen__value"><span class="resumen_cantidad"><%= totalQuantity %></span></p>
+            <p class="resumen__value resumen_cantidad"><%= totalQuantity %></p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">SUBTOTAL</p>
-            <p class="resumen__value">
-              $ <span class="resumen_subtotal"><%= totalPrice %></span>
-            </p>
+            <p class="resumen__value resumen_subtotal"><%= arg(Number(totalPrice)) %></p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">ENVIO</p>
-            <p class="resumen__value">$ <span class="resumen_envio"><%= shipping %></span></p>
+            <p class="resumen__value resumen_envio"><%= arg(Number(shipping)) %></p>
           </div>
           <div class="resumen__div resumen__total">
             <p class="resumen__detail">TOTAL</p>
-            <p class="resumen__value">$ <span class="resumen_total"></span><%= totalPrice + shipping %></p>
+            <p class="resumen__value resumen_total"><%= arg(Number(totalPrice) + Number(shipping)) %></p>
           </div>
         </article>
         
