--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -1,7 +1,11 @@
 <%- include('../partials/header.ejs') %>
 
     <main class="item__page">
-      <% if (item) { %>
+      <% const arg = (number) => {
+        return number.toLocaleString('es-AR', { style: 'currency', currency: 'ARS' });
+      };
+
+       if (item) { %>
         <section class="item container">
           <picture class="item__img">
             <img class="card-item__img--front" src="<%= item.image_front %>" alt="<%= item.product_description %>" />
@@ -12,7 +16,7 @@
             <p class="item__license"><%= item.licence_name %></p>
             <h1 class="item__title"><%= item.product_name %></h1>
             <p class="item__description"><%= item.product_description %></p>
-            <p class="item__price">$ <%= item.price %></p>
+            <p class="item__price"><%= arg(Number(item.price)) %></p>
 
             <form class="item__carrito" action="/shop/item/<%= item.product_id %>" method="POST" enctype="application/json">
                 <input class="item__cantidad" name="quantity" type="text" placeholder="0" id="quantity" value="1" />
@@ -27,10 +31,7 @@
                 />
             </form>
 
-            <a class="item__pago" href="#">
-              <span class="item__pago--border">Ver métodos de pago</span> - <%= item.dues %>
-              CUOTAS SIN INTERÉS
-            </a>
+            <p class="item__pago"><%= item.dues %> CUOTAS SIN INTERÉS</p>
           </article>
         </section>
       <% } else { %>
@@ -76,7 +77,7 @@
                     <div class="card-item__content">
                       <p class="card-item__license"><%= item.licence_name %></p>
                       <h3 class="card-item__name"><%= item.product_name %></h3>
-                      <p class="card-item__price">$ <%= item.price %></p>
+                      <p class="card-item__price"><%= arg(Number(item.price)) %></p>
                       <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                     </div>
                   </a>
