--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -82,7 +82,11 @@
 
         <main class="shop">
           <ul class="shop__list">
-            <% filteredItems.forEach(item => { %>
+            <% const arg = (number) => {
+              return number.toLocaleString('es-AR', { style: 'currency', currency: 'ARS' });
+            };
+
+            filteredItems.forEach(item => { %>
               <li class="shop__item">
                 <article class="card-item">
                   <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
@@ -102,7 +106,7 @@
                     <div class="card-item__content">
                       <p class="card-item__license"><%= item.licence_name %></p>
                       <h3 class="card-item__name"><%= item.product_name %></h3>
-                      <p class="card-item__price">$ <%= item.price %></p>
+                      <p class="card-item__price"><%= arg(Number(item.price)) %></p>
                       <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                     </div>
                   </a>
