--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -13,7 +13,7 @@
                 type="email"
                 name="email"
                 id="email"
-                placeholder="admin@gmail.com"
+                placeholder="admin@funkoshop.com"
               />
             </li>
 
