[FIX] Arreglo query string en las categorías del header

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -45,13 +45,13 @@
               </a>
               <ul class="navbar__submenu">
                 <li class="navbar__subitem">
-                  <a class="navbar__sublink" href="/shop?filter=funkos">Funkos</a>
+                  <a class="navbar__sublink" href="/shop?cat=funkos">Funkos</a>
                 </li>
                 <li class="navbar__subitem">
-                  <a class="navbar__sublink" href="/shop?filter=remeras">Remeras</a>
+                  <a class="navbar__sublink" href="/shop?cat=remeras">Remeras</a>
                 </li>
                 <li class="navbar__subitem">
-                  <a class="navbar__sublink" href="/shop?filter=llaveros">Llaveros</a>
+                  <a class="navbar__sublink" href="/shop?cat=llaveros">Llaveros</a>
                 </li>
               </ul>
             </li>
@@ -86,13 +86,13 @@
             </a>
             <ul class="navbar__submenu">
               <li class="navbar__subitem">
-                <a class="navbar__sublink" href="/shop?order=funkos">Funkos</a>
+                <a class="navbar__sublink" href="/shop?cat=funkos">Funkos</a>
               </li>
               <li class="navbar__subitem">
-                <a class="navbar__sublink" href="/shop?order=remeras">Remeras</a>
+                <a class="navbar__sublink" href="/shop?cat=remeras">Remeras</a>
               </li>
               <li class="navbar__subitem">
-                <a class="navbar__sublink" href="/shop?order=llaveros">Llaveros</a>
+                <a class="navbar__sublink" href="/shop?cat=llaveros">Llaveros</a>
               </li>
             </ul>
           </li>
